1.8.1: Generalize data structures, Light refactoring